chore: Unimportant modifications

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ DB_PORT=3306
 DB_USERNAME=root
 DB_PASSWORD=123456
 DB_DATABASE=gin_study
+#ALiYun
+ACCESS_KEY_ID=your-access-key-id
+ACCESS_KEY_SECRET=your-access-key-secret
