--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ PORT=8080
 ENVIRONMENT=development
 APP_NAME=gin-study
 APP_VERSION=0.0.1
+CRYPT_KEY=
 # MySQL
 DB_HOST=127.0.0.1
 DB_PORT=3306
@@ -10,5 +11,5 @@ DB_USERNAME=root
 DB_PASSWORD=123456
 DB_DATABASE=gin_study
 #ALiYun
-ALIYUN_ACCESS_KEY_ID=your-access-key-id
-ALIYUN_ACCESS_KEY_SECRET=your-access-key-secret
+ALIYUN_ACCESS_KEY_ID=
+ALIYUN_ACCESS_KEY_SECRET=
