refactor: Fix the correct project architecture

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,12 @@ ALIYUN_ACCESS_KEY_ID=
 ALIYUN_ACCESS_KEY_SECRET=
 ALIYUN_SIGN_NAME=
 ALIYUN_TEMPLATE_CODE=
+#Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_DIAL_TIMEOUT=10
+REDIS_READ_TIMEOUT=30
+REDIS_WRITE_TIMEOUT=30
+REDIS_POOL_SIZE=10
+REDIS_POOL_TIMEOUT=30
